doc. add query types and response definitions
